fixing icons and a bit more spacing

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ a:hover {
   border-radius: 10px;
   padding: 1.5rem;
   transition: transform 0.3s ease;
-  margin-bottom: 3rem !important;
+  margin-bottom: 2.5rem !important;
 }
 
 .card:hover {
